--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -100,6 +100,7 @@ jobs:
           {"py_ver": "3.7", "tox_env": "py37"},
           {"py_ver": "3.8", "tox_env": "py38"},
           {"py_ver": "3.9", "tox_env": "py39"},
+          {"py_ver": "3.10", "tox_env": "py310" },
         ]
     steps:
       - name: Checkout code
@@ -135,7 +136,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python: [3.7, 3.8, 3.9]
+        python: [3.7, 3.8, 3.9, 3.10]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -163,7 +164,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python: [3.7, 3.8, 3.9]
+        python: [3.7, 3.8, 3.9, 3.10]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
