--- a/.github/workflows/python_tests.yml
+++ b/.github/workflows/python_tests.yml
@@ -136,7 +136,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python: [3.7, 3.8, 3.9, 3.10]
+        python: ["3.7", "3.8", "3.9", "3.10"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -164,7 +164,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python: [3.7, 3.8, 3.9, 3.10]
+        python: ["3.7", "3.8", "3.9", "3.10"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
