--- a/sdks/python/test-suites/dataflow/common.gradle
+++ b/sdks/python/test-suites/dataflow/common.gradle
@@ -364,3 +364,49 @@ task validatesContainer() {
     }
   }
 }
+
+def tensorRTTests = tasks.register("tensorRTtests") {
+  dependsOn 'installGcpTest'
+  dependsOn ':sdks:python:sdist'
+  def dockerfile = "${rootDir}/sdks/python/apache_beam/ml/inference/tensorrt_dev.dockerfile"
+  def dataflowProject = 'apache-beam-testing'
+  def pythonVer = project.project(':sdks:python').pythonVersion.replace('.', '')
+  def dockerImageRoot = "us.gcr.io/${dataflowProject}/python-postcommit-it"
+  def dockerPythonImageContainer = "${dockerImageRoot}/python"
+  def dockerTag = new Date().format('yyyyMMddHHmmss')
+  def dockerPythonImageName = "${dockerPythonImageContainer}:${dockerTag}"
+  doFirst{
+    exec {
+      commandLine "docker", "build", ".", "-f", "${dockerfile}", "-t", "${dockerPythonImageName}"
+      }
+    exec {
+      commandLine "docker", "push", "${dockerPythonImageName}"
+    }
+    def testOpts = basicPytestOpts
+    def argMap = [
+      "test_opts": testOpts,
+      "runner": "TestDataflowRunner",
+      "machine_type":"n1-standard-4",
+      "sdk_container_image": "${dockerPythonImageName}",
+      "sdk_location": files(configurations.distTarBall.files).singleFile,
+      "collect": "uses_tensorrt and it_postcommit",
+      "suite": "postCommitIT-df${pythonVersionSuffix}"
+    ]
+    def cmdArgs = mapToArgString(argMap)
+    exec {
+      executable 'sh'
+      args '-c', ". ${envdir}/bin/activate && pip install pillow>=8.0.0 &&${runScriptsDir}/run_integration_test.sh ${cmdArgs}"
+      }
+    }
+ doLast {
+    exec {
+      commandLine "docker", "rmi", "--force", "${dockerPythonImageName}"
+    }
+    exec {
+      commandLine "gcloud", "--quiet", "container", "images", "untag", "${dockerPythonImageName}"
+    }
+    exec {
+      commandLine "./scripts/cleanup_untagged_gcr_images.sh", "${dockerPythonImageContainer}"
+    }
+  }
+}
